--- a/style3.css
+++ b/style3.css
@@ -19,6 +19,145 @@
     width: 100%;
     height: 100%;
 }
+
+/*-----For Cambodian background page------*/
+.backgroundinfo{
+   float: left;
+    max-width: 650px;
+}
+
+/*-----Timeline------*/
+* {
+  box-sizing: border-box;
+}
+
+
+/* The actual timeline (the vertical ruler) */
+.timeline {
+  position: relative;
+  margin: 0 auto;
+  float: left;
+  max-width: 350px;
+}
+
+/* The actual timeline (the vertical ruler) */
+.timeline::after {
+  content: '';
+  position: absolute;
+  width: 6px;
+  background-color: #d2d4dd;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  margin-left: -3px;
+}
+
+/* Container around content */
+.container {
+  position: relative;
+  background-color: inherit;
+  width: 50%;
+  display: inline-block
+}
+
+/* The circles on the timeline */
+.container::after {
+  content: '';
+  position: absolute;
+  width: 25px;
+  height: 25px;
+  right: -17px;
+  background-color: #393f4d;
+  border: 4px solid #fdd86b;
+  top: 15px;
+  border-radius: 50%;
+  z-index: 1;
+}
+
+/* Place the container to the left */
+.left {
+  left: 0;
+}
+
+/* Place the container to the right */
+.right {
+  left: 50%;
+}
+
+/* Add arrows to the left container (pointing right) */
+.left::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  right: 30px;
+  border: medium solid #d2d4dd;
+  border-width: 10px 0 10px 10px;
+  border-color: transparent transparent transparent #d2d4dd;
+}
+
+/* Add arrows to the right container (pointing left) */
+.right::before {
+  content: " ";
+  height: 0;
+  position: absolute;
+  top: 22px;
+  width: 0;
+  z-index: 1;
+  left: 30px;
+  border: medium solid #d2d4dd;
+  border-width: 10px 10px 10px 0;
+  border-color: transparent #d2d4dd transparent transparent;
+}
+
+/* Fix the circle for containers on the right side */
+.right::after {
+  left: -16px;
+}
+
+/* The actual content */
+.content {
+  padding: 20px 30px;
+  background-color: ;
+  position: relative;
+  border-radius: 6px;
+}
+
+/* Media queries - Responsive timeline on screens less than 600px wide */
+@media screen and (max-width: 600px) {
+/* Place the timelime to the left */
+  .timeline::after {
+    left: 31px;
+  }
+
+/* Full-width containers */
+  .container {
+    width: 100%;
+    padding-left: 70px;
+    padding-right: 25px;
+  }
+
+/* Make sure that all arrows are pointing leftwards */
+  .container::before {
+    left: 60px;
+    border: medium solid #d2d4dd;
+    border-width: 10px 10px 10px 0;
+    border-color: transparent #d2d4dd transparent transparent;
+  }
+
+/* Make sure all circles are at the same spot */
+  .left::after, .right::after {
+    left: 15px;
+  }
+
+/* Make all right containers behave like the left ones */
+  .right {
+    left: 0%;
+  }
+}
+
 /*----For placing videos in center----*/
 
 .video{
@@ -306,7 +445,8 @@ filter: alpha(opacity=70)
     padding-bottom: 10px;
     padding-left: 10px;
     padding-right: 10px;
-    min-height: 160px;
+    min-height: 1px;
+    text-align: right
 }
 
 /*----------------Triptych-----------------*/
@@ -370,7 +510,10 @@ h3 {
 }
 h4 {
 	font-family: "Cormorant Garamond", "Garamond", "serif";
-	color: #fdd86b;
+	color: #fdd86b;	
+    font-size: 1.125em;
+	/* 1.125x body copy size = 18px */
+	line-height: 1.11111111;
 }
 .caption {
 	padding-left: 10px;
@@ -461,11 +604,7 @@ h3 {
 		line-height: 1.25;
 	}
 }
-h4 {
-	font-size: 1.125em;
-	/* 1.125x body copy size = 18px */
-	line-height: 1.11111111;
-}
+
 @media (min-width: 43.75em) {
 	h4 {
 		line-height: 1.22222222;
@@ -693,6 +832,8 @@ h4 {
 		text-align: center;
 	}
 }
+
+
 /*----full bleed background-----*/
 
 .bb {
@@ -716,12 +857,7 @@ h4 {
 	float: left;
 	display: inline;
 }
-.avenir {
-	font-family: 'avenir next', avenir, sans-serif;
-}
-.times {
-	font-family: times, serif;
-}
+
 .i {
 	font-style: italic;
 }
