--- a/style3.css
+++ b/style3.css
@@ -170,7 +170,7 @@ body {
 	/*(default background color for the entire page)*/
 	color: #d2d4dd;
 	/*(default font color for the entire page)*/
-	font-family: "Proza Libre", "libre", "proza", "ttfautohint" "sans-serif";
+	font-family: 'Montserrat', sans-serif;
 	/*(default typeface for the entire page)*/
 	font-weight: 300;
 	/*(font thickness)*/
