--- a/style3.css
+++ b/style3.css
@@ -1,5 +1,5 @@
 /* CSS Document */
-*-----photo cover---------*/
+/*-----photo cover---------*/
 .photocover{
     color: #d2d4dd;
     text-shadow: -1px 0 #393f4d, 0 1px #393f4d, 1px 0 #393f4d, 0 -1px #393f4d;
