--- a/style3.css
+++ b/style3.css
@@ -1,4 +1,7 @@
 /* CSS Document */
+
+/* Colors for Reference: dark #393f4d, off-white #d2d4dd, yellow #fdd86b */
+
 /*-----photo cover---------*/
 .photocover{
     color: #d2d4dd;
@@ -458,7 +461,7 @@ filter: alpha(opacity=70)
 #alt-caption {
     background-color: #393f4d;
     color: #d2d4dd;
-    font-family: "Proza Libre", "libre", "proza", "ttfautohint" "sans-serif";
+    font-family: 'Montserrat', sans-serif;
     font-size: .9em;
     margin-left: auto;
     margin-right: auto;
@@ -514,9 +517,7 @@ article {
 	margin-top: -7px;
 	background-color: 393f4d
 }
-body {
-	font-family: "Proza Libre", "libre", "proza", "ttfautohint", "sans-serif";
-}
+
 h1 {
 	text-transform: uppercase;
 	font-family: "Cormorant Garamond", "Garamond", "serif";
@@ -658,13 +659,6 @@ h3 {
 }
 .flex-column {
 	flex-direction: column;
-}
-.avenir {
-	font-family: "Proza Libre", "libre", "proza", "ttfautohint" "sans-serif";
-}
-.baskerville {
-	font-family: 'Cormorant Garamond', 'Garamond', 'Serif';
-	;
 }
 .fw1 {
 	font-weight: 100;
