--- a/style3.css
+++ b/style3.css
@@ -45,18 +45,12 @@
     transform: translate(-50%, -50%);
 }
 
-@media only screen and (max-width: 1000000000){
-    .bottom-left{
-        bottom: 0%;
-        left: 0%;
-    }
-}
     
 /*-----photo cover---------*/
 .photocover{
     color: #d2d4dd;
     text-shadow: -2px 0 #393f4d, 0 2px #393f4d, 2px 0 #393f4d, 0 -2px #393f4d;
-    font-size: 8vw
+    font-size: 10vw
 }
 
 .covertext{
@@ -596,10 +590,6 @@ h1 {
 	font-family: "Cormorant Garamond", "Garamond", "serif";
 	color: #fdd86b;
 	padding-left: 10px
-	font-size: 2em;
-	/* 2x body copy size = 32px */
-	line-height: 1.25;
-	/* 45px / 36px */
 }
 h2 {
 	font-family: "Cormorant Garamond", "Garamond", "serif";
@@ -612,7 +602,7 @@ h2 {
 h3 {
 	font-family: "Cormorant Garamond", "Garamond", "serif";
 	color: #d2d4dd;
- 	font-size: 1.375em;
+    font-size: 1.375em;
 	/* 1.375x body copy size = 22px */
 	line-height: 1.13636364;
 	/* 25px / 22px */
@@ -651,7 +641,12 @@ body, h1, h2, h3, h4, h5, h6 {
 		/* equivalent to 22px */
 	}
 }
-
+h1 {
+	font-size: 2em;
+	/* 2x body copy size = 32px */
+	line-height: 1.25;
+	/* 45px / 36px */
+}
 @media (min-width: 43.75em) {
 	h1 {
 		font-size: 2.5em;
