--- a/adventureclub.css
+++ b/adventureclub.css
@@ -2,8 +2,11 @@
 
 /* Colors for Reference: beige #ece8d2, green #50643a, brown #4a3a32, blue #2d303e */
 
-/*----Profile Cards-----*/
 
+/*----Profile Cards-----*/
+.profilecard{
+    display: inline-block;
+}
 
 /*-----Hides small profile on larger screens---------*/
 @media only screen and (min-width: 600px){
@@ -59,7 +62,7 @@
 .covertext{
     color: #4a3a32;
     size: 10vw;
-    text-shadow: -1.5px 0 #ece8d2, 0 1.5px #ece8d2, 1.5px 0 #ece8d2, 0 -1.5px #ece8d2;
+
     
 }
 
@@ -871,8 +874,8 @@ h1 {
 .w-100 {
 	width: 100%;
 }
-.white-60 {
-	color: rgba(255, 255, 255, .6);
+.brown {
+	color: #4a3a32;
 }
 .bg-black-80 {
 	background-color: rgba(0, 0, 0, .8);
@@ -1197,7 +1200,7 @@ h1 {
 		margin-top: 0;
 	}
 }
-.hover-gold:hover {
+.hover-green:hover {
 	color: #50643a
 }
 .bg-grey {
