--- a/HammockClub/hammockclub.css
+++ b/HammockClub/hammockclub.css
@@ -28,7 +28,7 @@
 	/*(image logo position)*/
 	border-bottom: thin solid #;
 	/*(border under nav bar)*/
-    background-image: url(""); /*(image logo)*/
+    background-image: url(img/logo2.png); /*(image logo)*/
 }
 
 /*----------------navigation container-----------------*/
