--- a/extension/extension.css
+++ b/extension/extension.css
@@ -1,15 +1,16 @@
     /*color:#f4bb32;
     background-color: #05a0c4;
-rgba(0, 0, 0, .6);
-rgba(0, 0, 0, .9);*/
+    rgba(0, 0, 0, .9);*/
 
 h3 {
+    font-size: 1em;
     font-family: sans-serif;
-    font-size: 1.3vw;
     position: relative;
     color:rgba(0, 0, 0, .9);
-    background-color: #f4bb32;
-   /* color:#f4bb32;
+    background-color:#f4bb32;
+    font-family: 'Roboto', sans-serif;
+   /* background-color: #f4bb32;*/
+   /* color:#05a0c4;
     background-color: #05a0c4;*/
     padding:5px;
 }
@@ -105,8 +106,8 @@ h3 {
 
 .f6 {
     font-size: .875rem;
-}*/
-
+}
+*/
 @media screen and (min-width: 30em) {
     .w-25-ns {
         width: 25%;
