--- a/extension/extension.css
+++ b/extension/extension.css
@@ -4,21 +4,12 @@
 
 h3 {
     font-size: 1em;
-    font-family: sans-serif;
-    position: relative;
     color:rgba(0, 0, 0, .9);
     background-color:#f4bb32;
     font-family: 'Roboto', sans-serif;
     padding:5px;
-   /* border-bottom-color: #05a0c4;*/
-    border-bottom: 5px #05a0c4 solid;
-}
-
-.a{
-    color:#05a0c4
-}
-
-.headline{
+    border-left: 5px #05a0c4 solid;
+   /* border-bottom: 5px #05a0c4 solid;*/
     position: absolute;
     bottom: 6%;
     left: 6%;
@@ -26,32 +17,36 @@ h3 {
     z-index: 10
 }
 
-.aspect-ratio {
-    height: 0;
+div{
     position: relative;
+    padding-bottom: 110%;
 }
 
-.aspect-ratio--1x1 {
-    padding-bottom: 100%;
+article{
+    float: left;
+    display: inline;
+    width: 100%;
 }
 
-.aspect-ratio--object {
+.article_photo{
+    display: block;
+    background-repeat: no-repeat;
+    background-position: center center;    
+    background-size: cover;
     position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
     width: 100%;
     height: 100%;
+    border:3px #05a0c4 solid;
 }
 
-.cover {
-    background-size: cover !important;
-}
 
-.bg-center {
-    background-repeat: no-repeat;
-    background-position: center center;
+header{
+ /*   border-bottom-style:solid;
+    border-bottom-width:3px;
+    border-bottom-color: #05a0c4;*/
+    display:block;
+    margin-bottom: 2px;
+    width:100%;
 }
 
 .cf:before, .cf:after {
@@ -67,65 +62,14 @@ h3 {
     *zoom: 1;
 }
 
-.db {
-    display: block;
-}
-
-.fl {
-    float: left;
-    display: inline;
-}
-
-.fw4 {
-    font-weight: 400;
-}
-
-.w-100 {
-    width: 100%;
-}
-
-.black-90 {
-    color: rgba(0, 0, 0, .9);
-}
-
-.black-60 {
-    color: rgba(0, 0, 0, .6);
-}
-
-
-.ph2 {
-    padding-left: .5rem;
-    padding-right: .5rem;
-}
-
-/*
-.f5 {
-    font-size: 1rem;
-}
-
-.f6 {
-    font-size: .875rem;
-}
-*/
 @media screen and (min-width: 30em) {
-    .w-25-ns {
+    article {
         width: 25%;
     }
-
-    .ph0-ns {
-        padding-left: 0;
-        padding-right: 0;
-    }
-
-  /*  .f4-ns {
-        font-size: 1.25rem;
-    }*/
 }
 
 @media screen and (min-width: 30em) and (max-width: 60em) {
-    .w-50-m {
+    article {
         width: 50%;
     }
 }
-
-
