relinking twitter, updating copyright

--- a/style3.css
+++ b/style3.css
@@ -1,5 +1,5 @@
 /* CSS Document */
-
+/*Copyright 2021 Aidan McGloin*/
 /* Colors for Reference: dark #393f4d, off-white #d2d4dd, yellow #fdd86b */
 
 /*-----Hides small profile on larger screens---------*/
