--- a/extension/extension.css
+++ b/extension/extension.css
@@ -9,7 +9,7 @@ h3 {
     background-color:#f4bb32;
     font-family: 'Roboto', sans-serif;
     padding:5px;
-    border:.6px #05a0c4 solid;
+   /* border:.6px #05a0c4 solid;*.
     border-left: 10px #05a0c4 solid;
    /* border-bottom: 5px #05a0c4 solid;*/
     position: absolute;
