--- a/mnextension/extension.css
+++ b/mnextension/extension.css
@@ -1,17 +1,24 @@
     /*color:#f4bb32;
     background-color: #05a0c4;
-    rgba(0, 0, 0, .9);*/
+    rgba(0, 0, 0, .9);
+14c9ad
+
+
+
+*/
+
 /*This code, but no assets, are Copyrighted 2021 @Aidan McGloin, aidancmcgloin@gmail.com*/
 
 h3 {
     font-size: 1em;
     color:rgba(0, 0, 0, .9);
-    background-color:#f4bb32;
+    background-color:#14c9ad;
+    color:white;
     font-family: 'Roboto', sans-serif;
     padding:5px;
    /* border:.6px #05a0c4 solid;*.
-   /* border-bottom: 5px #05a0c4 solid;*/
     border-left: 10px #05a0c4 solid;
+   /* border-bottom: 5px #05a0c4 solid;*/
     position: absolute;
     bottom: 6%;
     left: 6%;
