--- a/pages/style.css
+++ b/pages/style.css
@@ -9,7 +9,7 @@ body {
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
     color: #545454;
     font-family: Garamond,Baskerville,Baskerville Old Face,Hoefler Text,Times New Roman,serif; ;
-    font-size: .875em;
+    font-size: 16px;
     line-height: 1.5;
     margin: 0 auto;
     max-width: 800px;
@@ -58,3 +58,9 @@ img {
         filter: grayscale(0%);
     }
 }
+
+.box {
+    float: right;
+    width: 33.33%;
+    padding: 5px;
+  }
