--- a/pages/archive/style.css
+++ b/pages/archive/style.css
@@ -4,17 +4,25 @@ html {
     -webkit-font-smoothing: antialiased;
 }
 
+
+
 body {
     background: #fff;
     box-shadow: 0 0 2px rgba(0, 0, 0, 0.06);
     color: #545454;
     font-family: Garamond,Baskerville,Baskerville Old Face,Hoefler Text,Times New Roman,serif; ;
-    font-size: 16px;
+    font-size: 1em;
     line-height: 1.5;
     margin: 0 auto;
     max-width: 800px;
     padding: 2em 2em 4em;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+        font-size: 1.25em;
+    }
+  }
 
 h1, h2, h3, h4, h5, h6 {
     color: #222;
